--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -15,4 +15,16 @@
 
  body {
      font-family: 'Baloo Bhai 2', cursive;
+     color: $black;
  }
+
+.main {
+    margin: 55px 80px 0px 200px;
+    display: flex;
+}
+
+.main__left {
+    width: 550px;
+}
+
+
