--- a/src/sass/components/_course.scss
+++ b/src/sass/components/_course.scss
@@ -1,5 +1,7 @@
 .course {
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .course__info {
@@ -11,7 +13,7 @@
 .course__inner {
     display: flex;
     align-items: center;
-    padding: 8px 24px 8px 8px;
+    padding: 8px;
 }
 
 .course__img {
@@ -67,3 +69,21 @@
     .course__btn {
         @include black__btn;
     }
+
+.course__arrows {
+    
+    display: flex;
+    align-items: center;
+    
+    span {
+        font-size: 40px;
+    }
+    
+    &--left {
+        transform: rotate(-90deg);
+    }
+    
+    &--right {
+        transform: rotate(90deg);
+    }
+}
