--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,3 +5,7 @@
 @import 'components/_header';
 @import 'components/_course';
 @import 'components/_courses-list';
+@import 'components/_navigation';
+@import 'components/_stats';
+@import 'components/_statistics';
+@import 'components/_banner';
